--- a/css/styles.css
+++ b/css/styles.css
@@ -364,12 +364,17 @@ a {
     width: 1440px;
     height: 312px;
     background: var(--navy-blue);
+    display: flex;
 }
 
 .footer-container {
     width: 294px;
     height: 132px;
     margin-left: 156px;
+}
+
+.logo-link.studio-footer {
+    margin-top: 120px;   
 }
 
 .footer-text,
