--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,11 @@ a {
 
 /* Визначення ширини та падінгів для контейнера */
 .container {
-    max-width: 1128px;
-    margin: 0 auto;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .visually-hidden {
@@ -71,7 +74,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 24px 0px 24px 0px;
+     
 }
 
 .header {
@@ -80,7 +83,8 @@ a {
 .main-nav {
     display: flex;
     flex-grow: 1;  
-   
+    align-items: center;
+    
 }
 
 .nav-links  {
@@ -90,6 +94,7 @@ a {
     flex-direction: row;
     gap: 40px;
     margin-left: 76px;
+    
 }
 .contact-links {
     display: flex;
@@ -108,8 +113,6 @@ a {
     text-transform: uppercase;
     color: var(--iris);
     text-decoration: none;
-    display: flex;
-    align-items: right;
     justify-content: flex-start;
     flex-direction: row;
     gap: 0px
@@ -117,6 +120,7 @@ a {
 
 .logo-link .studio {
     color: var(--navy-blue);
+    align-items: center;
 }
 
 
@@ -127,6 +131,8 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--navy-blue);
+    padding: 24px 0px 24px 0px;
+    display: block;
 }
 
 
@@ -154,11 +160,8 @@ a {
 
 
 .services-section {
-    width: 1440px;
-    height: 600px;
+    padding: 188px 0;
     background-color: var(--navy-blue);
-    display: flex;
-
 }
 
 .services-container {
@@ -176,9 +179,9 @@ a {
     color: var(--white);
     background:var(--navy-blue);
     margin-bottom: 48px;
-    margin-top: 188px;
-    margin-left: 276px;
-    margin-right: 276px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 496px;
     
     
 }
@@ -207,15 +210,17 @@ a {
     display: flex;
     flex-direction: column;
 }
+
 .filter-buttons {
-    flex-direction: row;
+    display: flex;
     justify-content: center;
-    margin-top: 96px;
-    margin-left: 271px;
-    gap: 24px;
-}
-
-
+    margin-top: 93px;
+  }
+  
+  .filter-buttons li {
+    display: inline-block; /* Розташувати елементи в рядок */
+    
+  }
 
 .filter-button {
     background: var(--cornflower);
@@ -242,6 +247,12 @@ a {
     color: var(--white);
 }
 
+
+.project-section {
+    padding-top: 96px;
+    padding-bottom: 120px;
+
+}
 .project-list {
     display: flex;
     flex-wrap: wrap;
@@ -252,40 +263,35 @@ a {
 
 .project-item {
     flex-basis: calc((100% - 48px) / 3);
-    border: 1px solid #e7e9fc;
     width: calc((100% - 48px) / 3); 
-    height: 420px;
+}
+
+.project-info {
+    border: 1px solid var(--cornflower);
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .project-title {
-    margin-top: 32px;
-    padding-left: 16px;
+    margin-bottom: 8px;
 }
 
-.project-category {
-    margin-top: 8px; 
-    padding-left: 16px;   
-}
+.features-section {
+    padding-top: 120px;
+ }
 
 .features-list {
     display: flex;
-    justify-content: space-between;
-    margin-left: auto; /* Ajusta el margen izquierdo según tus necesidades */
-    margin-right: auto; /* Ajusta el margen derecho según tus necesidades */
-    margin-top: 120px;
-    width: calc(100% - 72px)/4;
-    height: 104px;
-   
 }
 
 .feature-item:last-child {
-    margin-right: 0;
+    margin-right: 0; /* Quita el margen del último elemento */
 }
 
 .feature-item {
-    
     flex: 1; /* Para que los elementos ocupen el mismo espacio */
     margin-right: 24px; /* Agrega espacio entre los elementos */
+    
 }
 
 .feature-name {
@@ -308,10 +314,8 @@ a {
     color: var(--slate);
 }
 
-.services-images-container {
-    width: 1128px;
-    height: 412px;
-    margin-top: 120px;
+.services-images-section {
+    padding: 120px 0;
 }
 
 .services-images-list {
@@ -321,7 +325,7 @@ a {
     
 }
 
-.services-images-title {
+.services-images-list {
     gap: 24px;
 }
 
@@ -340,45 +344,32 @@ a {
 }
 
 .service-image-item {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    gap: 0px;
     border: 1px solid var(--cornflower);
 }
 
 .team-section {
-    width: 1440px;
-    height: 732px;
     background-color: var(--cloud);
-    margin-top: 120px;
+    padding: 120px 0;
 }
+
 .team-container {
     display: flex;
     flex-direction: column;
 }
 
-.team-title { 
-    margin-top: 120px;
-}
 
 .team-list {
     display: flex;
     justify-content: space-between;
     margin-top: 72px;
+    gap: 24px;
 }
 
 .team-member {
     border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px 0px;
-    width: 264px;
-    height: 380px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: var(--white);
-}
-.team-memeber-image {
-    gap: 24px;
 }
 
 .team-member-name {
@@ -403,31 +394,30 @@ a {
 
 /* Footer Styles */
 .footer {
-    width: 1440px;
-    height: 312px;
+    padding: 100px 0;
     background: var(--navy-blue);
-    display: flex;
+    
 }
 
-.footer-container {
-    width: 264px;
-    height: 132px;
-    margin-left: 156px;
+.logo-link {
+    display: inline-block;
 }
 
-.footer-logo {
-    margin-top: 100px;
-}
-
-.footer-text,
 .studio-footer {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--cloud);
+    max-width: 264px;
 }
 
 .footer-text {
     margin-top: 16px;
+    max-width: 264px;
+    color: var(--cloud);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
